[tool.poetry]
name = "wizardry"
version = "0.1.0"
description = ""
authors = ["ssantoshp <santoshpassoubady@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
wizardry = "wizardry.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
termcolor = "^1.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
PyInquirer = "^1.0.2"
pyfiglet = "^0.8.0"
termcolor = "1.1.0"
requests = "2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
